Fix alerts behind save panels (#172)

--- a/priv/static/css/site.css
+++ b/priv/static/css/site.css
@@ -103,6 +103,11 @@ h4 {
   margin-top: 30px;
 }
 
+body.c .alert,
+body.v .alert {
+  margin-top: 75px;
+}
+
 .label-lg {
   font-size: 18px;
 }
